Fulfill requirements to publish app

--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,8 @@
   "subfiles": [],
   "subfiles_extension": [
     "extension.js"
-  ]
+  ],
+  "description": "Enhancify allows users to get metrics about the currently playing song and get recommendations based on their recently listened to songs/artists or any set of song metrics.",
+  "preview": "Enhancify.png",
+  "readme": "README.md"  
 }
